--- a/working/_posts/2012-05-19-statboot.md
+++ b/working/_posts/2012-05-19-statboot.md
@@ -3,7 +3,7 @@ layout: cvitem
 title: Block bootstrap consistency under weak assumptions
 info: Working Paper 11017, Iowa State University, 2011 (revising for resubmission).
 link: http://www.econ.iastate.edu/research/working-papers/p14313
-notes: Project files are available at https://github.com/gcalhoun/statboot-paper
+notes: Project files are available at <a href="https://github.com/gcalhoun/statboot-paper">https://github.com/gcalhoun/statboot-paper</a>
 ---
 This paper weakens the size and moment conditions needed for typical
 block bootstrap methods (i.e. the moving blocks, circular blocks, and
