Removed broken link for 2009 midterm
For some reason, I can't find the 2009 midterm. I'll have to add it later.

--- a/teaching/_posts/2012-08-20-Economics-671-Fall-2012.md
+++ b/teaching/_posts/2012-08-20-Economics-671-Fall-2012.md
@@ -20,8 +20,8 @@ we move through the semester.
   * 2010 [midterm](/downloads/econ-671-2010-midterm.pdf) and 
   [final](/downloads/econ-671-2010-final.pdf)
 
-  * 2009 [midterm](/downloads/econ-671-2009-midterm.pdf) and 
-  [final](/downloads/econ-671-2009-final.pdf)
+  * 2009 [final](/downloads/econ-671-2009-final.pdf) (I've misplaced
+  the midterm)
 
 I'm changing the order of the material substantially from previous
 years, so don't use past exams as study guides. But the old exams
