Added list of past handouts to 671 webpage

--- a/teaching/_posts/2012-08-20-Economics-671-Fall-2012.md
+++ b/teaching/_posts/2012-08-20-Economics-671-Fall-2012.md
@@ -26,3 +26,16 @@ we move through the semester.
 I'm changing the order of the material substantially from previous
 years, so don't use past exams as study guides. But the old exams
 might help you learn what sort of questions I find interesting.
+
+You might also be interested in some other handouts that I've written
+for graduate students in the past:
+
+{% for doc in site.categories.handouts %}
+
+{% if doc.tags contains 'graduate' %}
+* [{{ doc.title }}]({{ doc.url }}) {% unless doc.nocc %}\([CC][]\){% endunless %}  
+  {{ doc.content | truncatewords: 50 | strip_html }}  
+  Last edited: {{ doc.date | date_to_string }}
+{% endif %}
+
+{% endfor %}
