--- a/handouts/_posts/2012-10-06-quotes.md
+++ b/handouts/_posts/2012-10-06-quotes.md
@@ -11,12 +11,21 @@ I'll add quotations in the future as I find them.
   have to ram it down their throats." Howard Aiken (1900 to 1973)
   <http://en.wikiquote.org/wiki/Howard_H._Aiken>
 
-* "To call in the statistician after the experiment is done may be no more than 
-  asking him to perform a postmortem examination: he may be able to say what 
-  the experiment died of." Ronald Fisher (1890 to 1962)
+* "To call in the statistician after the experiment is done may be no more
+  than asking him to perform a postmortem examination: he may be able to 
+  say what the experiment died of." Ronald Fisher (1890 to 1962)  
   <http://en.wikiquote.org/wiki/Ronald_Fisher>
 
 * "The combination of some data and an aching desire for an answer does not 
   ensure that a reasonable answer can be extracted from a given body of data."
   John Tukey (1915 to 2000)
   <http://en.wikiquote.org/wiki/John_Tukey>
+
+* "Rules of Optimization:
+  * Rule 1: Don't do it.
+  * Rule 2 (for experts only): Don't do it yet."  
+  M.A. Jackson
+
+* "More computing sins are committed in the name of effeciencey (without
+  necessarily achieving it) than for any other single reason, including
+  blind stupidity." W.A. Wulf
