--- a/research/working/_posts/2012-05-19-statboot.md
+++ b/research/working/_posts/2012-05-19-statboot.md
@@ -1,7 +1,7 @@
 ---
 layout: research
 title: Block bootstrap consistency under weak assumptions
-info: Working Paper 11017, Iowa State University, 2011 (revising for resubmission).
+info: Working Paper 11017, Iowa State University, 2013 (revising for resubmission to *Econometric Theory*).
 link: http://www.econ.iastate.edu/research/working-papers/p14313
 notes: Project files are available at <a href="https://github.com/gcalhoun/statboot-paper">https://github.com/gcalhoun/statboot-paper</a>
 ---
