Tweaked configuration to fix bugs after reorganization

--- a/102/_posts/2013-02-15-ch11-handout.md
+++ b/102/_posts/2013-02-15-ch11-handout.md
@@ -22,14 +22,14 @@ spending
 Aggregate Consumption Function
 ==============================
 
-![Aggregate consumption function](../img/2013-02-15-fig1.jpg)
+![Aggregate consumption function](/102/img/2013-02-15-fig1.jpg)
 
 Income-expenditure equilibrium
 ==============================
 
-![Equilibrium](../img/2013-02-15-fig2.jpg)
+![Equilibrium](/102/img/2013-02-15-fig2.jpg)
 
 Multiplier
 ==========
 
-![Multiplier](../img/2013-02-15-fig3.jpg)
+![Multiplier](/102/img/2013-02-15-fig3.jpg)
