Move syllibi to blog subdirectory
Moving them to the blog directory will let the course syllibi show up as
general handouts in the main list.

--- a/blog/_posts/2013-01-04-syllabus-e674.md
+++ b/blog/_posts/2013-01-04-syllabus-e674.md
@@ -1,10 +1,12 @@
 ---
 layout: handout
-title: Econ 674 Syllabus
+title: Econ 674 Syllabus, Spring 2013
 subtitle: Macroeconometrics (part 1 of n), Gray Calhoun
 date: 2013-01-04
 nocc: true
 permalink: /674/2013/syllabus
+tags: 
+  - handout
 ---
 
 Macroeconometrics is important; this class will help you get started.
