--- a/blog/_posts/2012-08-03-syllabus-e671.md
+++ b/blog/_posts/2012-08-03-syllabus-e671.md
@@ -1,10 +1,12 @@
 ---
 layout: handout
-title: Econ 671 Syllabus
+title: Econ 671 Syllabus, Fall 2012
 subtitle: Econometrics I, Gray Calhoun
 date: 2012-08-20
 nocc: true
 permalink: /671/2012/syllabus
+tags: 
+  - handout
 ---
 
 This class has three goals.  You are going to study and learn some
