Move syllibi to blog subdirectory
Moving them to the blog directory will let the course syllibi show up as
general handouts in the main list.

--- a/blog/_posts/2013-01-11-syllabus-e102.md
+++ b/blog/_posts/2013-01-11-syllabus-e102.md
@@ -1,9 +1,11 @@
 ---
 layout: handout
-title: Econ 102 Syllabus
+title: Econ 102 Syllabus, Spring 2013
 subtitle: Principles of Macroeconomics, Gray Calhoun
 nocc: true
 permalink: /102/2013/syllabus
+tags: 
+  - handout
 ---
 
 This class has two main goals. It will train you to better understand
