Update to post on Incanter
This is a placeholder update right now, because I'm still working on
the main blog post about numeric instability in incanter.  But, since
I've been told I was wrong previously, I should at least put up a
notice on the post until I've convinced myself I'm not wrong.

--- a/blog/_posts/2013-04-10-clojure.md
+++ b/blog/_posts/2013-04-10-clojure.md
@@ -3,6 +3,15 @@ layout: blog
 title: Clojure, Incanter, and xpxi
 ---
 
+Update on 6/5
+-------------
+
+I've been told by an Incanter user that this post is too pessimistic.
+I'll look into his specific critiques and write another post soon.
+
+Original post
+-------------
+
 I’ve been casually interested in Lispy languages for a while; i.e. I’d
 like to learn one and am not going to let the fact that I only know
 bits of e-lisp after 15 years of using Emacs deter me.  Clojure seems
