New post on Incanter
I've written a new post on numeric instability issues that come up when
you use the same algorithm as Incanter to estimate linear regression
coefficients; it includes some R code that illustrates the issue as well.

--- a/blog/_posts/2013-04-10-clojure.md
+++ b/blog/_posts/2013-04-10-clojure.md
@@ -3,11 +3,14 @@ layout: blog
 title: Clojure, Incanter, and xpxi
 ---
 
-Update on 6/5
--------------
+Updates
+-------
 
-I've been told by an Incanter user that this post is too pessimistic.
-I'll look into his specific critiques and write another post soon.
+*6/5:* I've been told by an Incanter user that this post is too
+pessimistic.  I'll look into his specific critiques and write another
+post soon.
+
+*later:* [the new post is up](/blog/2013/06/07/incanter-update).
 
 Original post
 -------------
