Fix url in VISIONS blog post

--- a/blog/_posts/2013-07-15-visions.md
+++ b/blog/_posts/2013-07-15-visions.md
@@ -4,8 +4,10 @@ title: Still famous on the intranet
 author: Gray Calhoun
 ---
 
-FWIW, the Iowa State alumni magazine has [a short profile of me]
-(http://isualumblog.wordpress.com/2013/07/12/gray-calhoun-balancing-act),
-it's potentially interesting because it has pictures of my kids, who
+FWIW, the Iowa State alumni magazine has [a short profile of me][1],
+it's potentially interesting because it has a picture of my kids, who
 are cute.  I want to mention that I would have put on socks, but I
-assumed they weren't going to keep my feet in the pictures.  Next time...
+assumed they weren't going to keep my feet in the pictures.  Next
+time...
+
+[1]: http://isualumblog.wordpress.com/2013/07/12/gray-calhoun-balancing-act
