Add homework 2 for econ 671

--- a/blog/_posts/2013-08-26-syllabus-671.md
+++ b/blog/_posts/2013-08-26-syllabus-671.md
@@ -28,9 +28,9 @@ call me or stop by my office.
 
 * Instructor:
     * Gray Calhoun
-    * <{% include univ_email %}>
-    * {% include univ_office %}
-    * {% include univ_phone %}
+    * <gcalhoun@iastate.edu>
+    * 467 Heady Hall
+    * (515) 294-6271
     * Office hours after lecture (11 to ~12 Tuesdays and Thursdays)
       and by appointment
 * TA:
