Move 671 homework away from blog and onto course page

--- a/671/_posts/2013-09-05-hw2-671.md
+++ b/671/_posts/2013-09-05-hw2-671.md
@@ -1,18 +1,15 @@
 ---
 layout: blog
-title: Homework 2 for Econ 671
+title: Homework 2 for Econ 671, due Sept. 12th 2013
 author: Gray Calhoun
-permalink: /671/2013/hw2
 ---
-
-This assignment is due on Sept. 12th 2013
 
 Do
 
-- questions 6 and 11 from Gallant ch 2 and questions 2, 3, and 13 from
+* questions 6 and 11 from Gallant ch 2 and questions 2, 3, and 13 from
   Gallant ch 3
 
-- question 4.20 from Casella and Berger
+* question 4.20 from Casella and Berger
 
 Also do the following questions:
 
