--- a/671/_posts/2013-08-29-hw1-671.md
+++ b/671/_posts/2013-08-29-hw1-671.md
@@ -1,11 +1,8 @@
 ---
 layout: blog
-title: Homework 1 for Econ 671
+title: Homework 1 for Econ 671, due Sept. 5th 2013
 author: Gray Calhoun
-permalink: /671/2013/hw1
 ---
-
-This assignment is due on Sept. 5th 2013
 
 Do questions 1.24, 1.25, and 1.26 from Casella and Berger (2002), and
 questions 8, 9, and 27 in Gallant (1997) as well as the following
