Add Jaynes's book to 671 recommended list

--- a/blog/_posts/2013-08-26-syllabus-671.md
+++ b/blog/_posts/2013-08-26-syllabus-671.md
@@ -217,6 +217,9 @@ alphabetical order:
   Also available online (with supplemental material) at
   <http://www-stat.stanford.edu/~tibs/ElemStatLearn/>
 
+* Edwin T. Jaynes. *Probability Theory: the Logic of
+  Science*. Cambridge University Press, 2003.
+
 * Charles F. Manski. *Identification for Prediction and Decision*.
   Harvard University Press, 2007.
 
