--- a/research/_posts/2013-03-14-statboot.md
+++ b/research/_posts/2013-03-14-statboot.md
@@ -1,7 +1,7 @@
 ---
 layout: research
 title: Block bootstrap consistency under weak assumptions
-info: Working Paper 11017, Iowa State University, 2013 (resubmitted to <i>Econometric Theory</i>).
+info: Working Paper 11017, Iowa State University, 2013.
 link: http://www.econ.iastate.edu/research/working-papers/p14313
 notes: Project files are available at <a href="https://github.com/grayclhn/statboot-paper">https://github.com/grayclhn/statboot-paper</a>
 tags: working
