Fix missing 'link:' in stepdown paper

--- a/research/_posts/2013-10-07-stepdown.md
+++ b/research/_posts/2013-10-07-stepdown.md
@@ -2,7 +2,7 @@
 layout: research
 title: "Improved stepdown methods for asymptotic control of generalized error rates"
 info: 2013.
-http://gray.clhn.co/dl/calhoun-2013-stepdown.pdf
+link: http://gray.clhn.co/dl/calhoun-2013-stepdown.pdf
 tags: working
 ---
 
