Update old 671 homework to use mathjax for math

--- a/671/_posts/2013-08-29-hw1-671.md
+++ b/671/_posts/2013-08-29-hw1-671.md
@@ -8,13 +8,14 @@ Do questions 1.24, 1.25, and 1.26 from Casella and Berger (2002), and
 questions 8, 9, and 27 in Gallant (1997) as well as the following
 computational question:
 
-Suppose that X has a continuous distribution F and that
-U ∼ uniform(0,1).  It can be shown that F(X) = U in distribution
-and, consequently, that X = F⁻¹(U) in distribution (proven as Theorem
-2.1.10 in Casella and Berger).  Use this result to write an R function
-called `rtan` that generates n random variables from the
-location-scale family μ + σ X, where X ∼ F and
+Suppose that $X$ has a continuous distribution $F$ and that
+$U \sim uniform(0,1)$.  It can be shown that $F(X) = U$ in
+distribution and, consequently, that $X = F^{-1}(U)$ in distribution
+(proven as Theorem 2.1.10 in Casella and Berger).  Use this result to
+write an R function called `rtan` that generates n random variables
+from the location-scale family $μ + σ X$, where $X ∼ F$ and
 
-F(x) = 0.5 + tan⁻¹(x)/π.
-
-The arguments of the function should include n, μ, and σ.
+\begin{equation}
+  F(x) = 0.5 + tan^{-1}(x)/π.
+\end{equation}
+The arguments of the function should include $n$, $μ$, and $σ$.
