--- a/671/_posts/2013-09-05-hw2-671.md
+++ b/671/_posts/2013-09-05-hw2-671.md
@@ -14,20 +14,21 @@ Do
 Also do the following questions:
 
 * Let X and Y be two random variables. Prove that
-
+  \begin{equation}
     var(X) = E var(X | Y) + var(E(X | Y))
+  \end{equation}
 
 * Write an R function to generate draws from the density function in
   question 13, ch 3 of Greene using the Accept-Reject algorithm
   described in Section 5.6.2 of Casella and Berger (2002):
 
-  1. Draw U ~ uniform(0,1) and X ~ uniform(-1,1).
-  2. If U ≤ (1-X²), accept and store the value of X. Otherwise draw
-     U and X again.
-  3. Repeat until you accept and store n candidate values of X.
+  1. Draw $U$ from the uniform(0,1) and $X$ from the uniform(-1,1).
+  2. If $U ≤ (1-X²)$, accept and store the value of $X$. Otherwise
+     draw $U$ and $X$ again.
+  3. Repeat until you accept and store n candidate values of $X$.
 
-  This process generates n independent draws from the density
-  A (1-x²) 1{-1 ≤ x ≤ 1 }.  Notice that it does not require us to know
-  the normalizing constant A.  This is common for this sort of
+  This process generates n independent draws from the density $A
+  (1-x^2) 1 \\{-1 ≤ x ≤ 1 \\}$.  Notice that it does not require us to
+  know the normalizing constant $A$.  This is common for this sort of
   algorithm.  Use this function to verify your answers to question 13
   (and include output).
