--- a/671/_posts/2013-09-26-hw5-671.md
+++ b/671/_posts/2013-09-26-hw5-671.md
@@ -15,5 +15,6 @@ b) Write R functions that estimate the best unbiased estimator and the
 bias corrected MLE.
 
 c) Draw 10000 observations from the density and estimate the variance
-of each estimator.  Do this for a few different values θ (say, θ = -1,
-0, 1, and 5).  Do these simulations agree with your answers to part 7.54?
+of each estimator.  Do this for a few different values $θ$ (say, $θ$ =
+-1, 0, 1, and 5).  Do these simulations agree with your answers to
+part 7.54?
