--- a/671/_posts/2013-10-04-hw6-671.md
+++ b/671/_posts/2013-10-04-hw6-671.md
@@ -7,5 +7,5 @@ author: Gray Calhoun
 Please do questions 9.2, 9.14, 9.19, and 9.34 in CB and question 3.7
 in Greene, do the chapter 3 Application in Greene as well, and prove
 equation (A-74) in Greene's appendix A (this result holds for VCV
-matrices when X can be partitioned as [ X_1 X_2 ] and A_{ij} =
-X_i'X_j).
+matrices when $X$ can be partitioned as $[ X_1, X_2 ]$ and $A_{ij} =
+X_i'X_j)$.
