--- a/671/_posts/2013-10-17-hw7-671.md
+++ b/671/_posts/2013-10-17-hw7-671.md
@@ -8,7 +8,8 @@ Do empirical applications 4.1, 4.2, 5.2, and 5.3 in Greene as well as
 questions 8.13, 8.16, and 8.46 in Casella and Berger.  Also, consider
 these variations of 8.16:
 
-* Choose α to always force rejection, but with α restricted to [0, 0.1].
+* Choose $α$ to always force rejection, but with $α$ restricted to [0,
+  0.1].
 
-* Choose α to always force acceptance, but (again) with α restricted
-  to [0, 0.1].
+* Choose $α$ to always force acceptance, but (again) with $α$
+  restricted to [0, 0.1].
