Fix exam dates on 102 syllabus
The syllabus for 102 listed possible exam dates that are impossible
since the test center would be closed. They're fixed now.

--- a/blog/_posts/2014-01-09-syllabus-e102-4.md
+++ b/blog/_posts/2014-01-09-syllabus-e102-4.md
@@ -76,13 +76,13 @@ opportunities in class for students to earn extra credit.
 
 * Homework: 20% of grade
 * Midterm 1: 20% of grade
-  - available February 16th through February 23rd
+  - available February 17th through 21st
   - covers ch. 6-8 and 10-12
 * Midterm 2: 20% of grade
-  - available April 6th through April 13th
+  - available April 7th through 11th
   - covers ch. 13-17
 * Final exam: 40% of grade
-  - available May 2nd through May 9th
+  - available May 2nd and 5th through 9th
   - covers ch. 6-17, 19
 
 The "chapters covered" refers to the required textbook,
