Add learning objectives to econ 102 syllabus

--- a/blog/_posts/2014-01-09-syllabus-e102-4.md
+++ b/blog/_posts/2014-01-09-syllabus-e102-4.md
@@ -126,6 +126,23 @@ strong coverage of Economics:
 
 * [The Economist](http://www.economist.com), a weekly news magazine.
 
+Continuous improvement initiative
+---------------------------------
+
+As part of the university's and department's "continuous improvement
+initiative," all sections of Economics 102 are measuring two learning
+objectives in particular this academic year:
+
+1. Students will learn the concept of “Gross Domestic Product” (GDP)
+   and will be able to calculate the value of GDP by the expenditure
+   approach, given values of GDP components.
+
+2. Students will learn the concept of “Employment,” “Unemployment,”
+   “Labor Force,” and “Not in the Labor Force” and will be able to
+   classify an individual with given characteristics as “employed,”
+   “unemployed,” or “not in the labor force.”  Furthermore, students
+   will be able to calculate the rate of unemployment.
+
 University policies
 -------------------
 
