Added office hours to 102 syllabus

--- a/blog/_posts/2014-01-09-syllabus-e102-3.md
+++ b/blog/_posts/2014-01-09-syllabus-e102-3.md
@@ -49,12 +49,20 @@ and TAs:
 
 * Instructor: Gray Calhoun
   * <gcalhoun@iastate.edu>
-  * OH 12-12:45 MW in Heady 467
+  * Office hours 12-12:45 MW in Heady 467
 * TAs (OH will be listed later)
-  * Mr. Kit Kooiker, <kkooiker@iastate.edu>
-  * Mr. Sandip Agarwal, <sandip@iastate.edu>
-  * Mr. Dong-Jin Pyo, <djpyo@iastate.edu>
-  * Mr. Chao Li, <chaoli@iastate.edu>
+  * Mr. Kit Kooiker
+    * <kkooiker@iastate.edu>
+    * Office hours 5–6 MW in Heady 77
+  * Mr. Sandip Agarwal
+    * <sandip@iastate.edu>
+    * Office hours 9:30–11 TuTh in Heady 169
+  * Mr. Dong-Jin Pyo
+    * <djpyo@iastate.edu>
+    * Office hours 2–3:30 M in Heady 280B
+  * Mr. Chao Li
+    * <chaoli@iastate.edu>
+    * Office hours 2–4 F in Heady 80B
 
 If you can not make our regularly scheduled office hours, we'll all be
 happy to schedule other appointments by email.
