--- a/blog/_posts/2014-01-09-syllabus-e102-4.md
+++ b/blog/_posts/2014-01-09-syllabus-e102-4.md
@@ -49,13 +49,20 @@ and TAs:
 
 * Instructor: Gray Calhoun
   * <gcalhoun@iastate.edu>
-  * OH 12-12:45 MW in Heady 467
-* TAs (OH will be listed later)
-  * Ms. Shufen Chen, <sfchen@iastate.edu>
-  * Mr. James Whitmore, <jwhit@iastate.edu>
-  * Mr. Soumyadip Roy, <sroy30@iastate.edu>
-  * Mr. Rui Lu, <lurui@iastate.edu>
-  * Mr. Yoonho Choi, <ecoyoon@iastate.edu>
+  * Office hours 12–12:45 MW in Heady 467
+* TAs
+  * Ms. Shufen Chen
+    * <sfchen@iastate.edu>
+    * Office hours 10–11 W in Heady 180
+  * Mr. James Whitmore
+    * <jwhit@iastate.edu>
+    * Office hours 12–1 MWF and 11–11:30 TuTh in Heady 180
+  * Mr. Soumyadip Roy
+    * <sroy30@iastate.edu>
+    * Office hours TBD
+  * Mr. Yoonho Choi
+    * <ecoyoon@iastate.edu>
+    * Office hours 10–12 F in Heady 169
 
 If you can not make our regularly scheduled office hours, we'll all be
 happy to schedule other appointments by email.
