--- a/blog/_posts/2014-01-09-syllabus-e102-4.md
+++ b/blog/_posts/2014-01-09-syllabus-e102-4.md
@@ -59,7 +59,7 @@ and TAs:
     * Office hours 12–1 MWF and 11–11:30 TuTh in Heady 180
   * Mr. Soumyadip Roy
     * <sroy30@iastate.edu>
-    * Office hours TBD
+    * Office hours 11-1 W in Heady 78
   * Mr. Yoonho Choi
     * <ecoyoon@iastate.edu>
     * Office hours 10–12 F in Heady 169
