--- a/674/syllabus-2014.tex
+++ b/674/syllabus-2014.tex
@@ -3,13 +3,172 @@
 \author{Helle Bunzel and Gray Calhoun}
 \date{Fall semester, 2014}
 
-\newcommand{\TA}{\allcaps{TA}}
 \morefloats
-\input{tex/preamble}
-\input{tex/macros}
+\usepackage{
+  booktabs,
+  enumitem,
+  fancyvrb,
+  fancyhdr,
+  tabularx,
+  url,
+  verbatim,
+  xcolor,
+}
+\usepackage[T1]{fontenc}
+\usepackage[utf8x]{inputenc}
+\usepackage[bitstream-charter]{mathdesign}
+\usepackage[letterspace=35]{microtype}
+\usepackage[osf]{sourcecodepro}
+\usepackage{sourcesanspro}
+
+% Change to ragged-right without inline math breaks; this helps avoid
+% awkward line breaks or extensions into the right margin in math or
+% code.
+\RaggedRight
+\relpenalty=10000
+\binoppenalty=10000
+\setlength{\parindent}{1em}
 
 \renewcommand{\smallcaps}[1]{\allcaps{#1}}
 \renewcommand{\allcaps}[1]{\textls{\MakeUppercase{#1}}}
+
+\renewcommand{\FancyVerbFormatLine}[1]{\hspace{\leftmargini}#1}
+\fvset{frame=leftline,rulecolor=\color{lightgray}}
+
+\urlstyle{same}
+\DeclareUrlCommand\url{%
+\def\UrlLeft{\guilsinglleft}%
+\def\UrlRight{\guilsinglright}%
+\urlstyle{same}}
+
+\DisableLigatures{family = tt*}
+\frenchspacing
+
+\newcommand{\email}[1]{\href{mailto:#1}{\nolinkurl{#1}}}
+\newcommand{\DSGE}{\allcaps{DSGE}}
+\newcommand{\TA}{\allcaps{TA}}
+\newcommand{\VAR}{\allcaps{VAR}}
+
+\renewcommand{\labelitemi}{{$\circ$}}
+\renewcommand{\labelitemii}{\footnotesize$\circ$}
+\renewcommand{\labelitemiii}{\textperiodcentered}
+\renewcommand{\labelitemiv}{\footnotesize\textperiodcentered}
+
+\begin{filecontents}{syllabus-2014.bib}
+@book{Ca07,
+  title =	 {Methods for Applied Macroeconomic Research},
+  author =	 {Canova, Fabio},
+  year =	 2007,
+  publisher =	 {Princeton University Press}
+}
+
+@book{DD11,
+  title =	 {Structural Macroeconometrics},
+  author =	 {DeJong, David N and Dave, Chetan},
+  year =	 2011,
+  edition =	 {second},
+  publisher =	 {Princeton University Press}
+}
+
+@Article{FR07,
+  title =	 {{ABC}s (and {D}s) of Understanding {VAR}s},
+  author =	 {Fern{\'a}ndez-Villaverde, Jes{\'u}s and
+                  Rubio-Ram{\'\i}rez, Juan F. and Sargent, Thomas
+                  J. and Watson, Mark W.},
+  journal =	 {American Economic Review, Papers and Proceedings},
+  pages =	 {1021-1026},
+  month =	 {June},
+  year =	 2007,
+}
+
+@Book{Ha94,
+  author =	 {James D. Hamilton},
+  title =	 {Time Series Analysis},
+  publisher =	 {Princeton University Press},
+  year =	 1994
+}
+
+@InCollection{Ki13,
+  author =	 {Lutz Kilian},
+  title =	 {Structural {V}ector {A}utoregressions},
+  booktitle =	 {Handbook of Research Methods and Applications in
+                  Empirical Macroeconomics},
+  publisher =	 {Edward Elgar Publishing},
+  year =	 2013,
+  editor =	 {Hashimzade, Nigar and Thornton, Michael A.},
+  pages =	 {515-554}
+}
+
+@Book{Lu06,
+  author =	 {Helmut L{\"u}tkepohl},
+  title =	 {New Introduction to Multiple Time Series Analysis},
+  publisher =	 {Springer},
+  year =	 2006
+}
+
+@inproceedings{Lu76,
+  title =	 {Econometric Policy Evaluation: A Critique},
+  author =	 {Lucas Jr, Robert E.},
+  booktitle =	 {Carnegie-Rochester Conference Series on Public
+                  Policy},
+  volume =	 1,
+  pages =	 {19-46},
+  year =	 1976,
+  organization = {Elsevier}
+}
+
+@Misc{MS08,
+  author =	 {Anna Mikusheva},
+  title =	 {Lecture Notes for Time Series Analysis ({MIT}
+                  14.384)},
+  note =	 {Available at
+                  \url{http://ocw.mit.edu/courses/economics/14-384-time-series-analysis-fall-2013}. Licensed
+                  under Creative Commons BY-NC-SA},
+  year =	 2013
+}
+
+@article{No11,
+  title =	 {The Prize in Economic Sciences 2011 --- Advanced
+                  Information},
+  author =	 {{Nobel Prize Committee}},
+  year =	 2011,
+  journal =	 {Nobelprize.org},
+  note =	 {Available at
+                  \url{http://www.nobelprize.org/nobel_prizes/economic-sciences/laureates/2011/advanced-economicsciences2011.pdf}}
+}
+
+@Misc{SW08,
+  author =	 {James Stock and Mark Watson},
+  title =	 {{NBER} {S}ummer {I}nstitute {L}ectures: What's New
+                  in Econometrics --- Time Series},
+  howpublished = {Video and slides available at
+                  \url{http://www.nber.org/minicourse_2008.html}},
+  month =	 {July},
+  year =	 2008
+}
+
+@Article{Si12,
+  author =	 {Christopher A. Sims},
+  title =	 {Statistical Modeling of Monetary Policy and Its
+                  Effects},
+  journal =	 {American Economic Review},
+  year =	 2012,
+  volume =	 102,
+  number =	 4,
+  pages =	 {1187-1205},
+  month =	 {June},
+}
+
+@Article{Si80,
+  title =	 {Macroeconomics and Reality},
+  author =	 {Sims, Christopher A.},
+  journal =	 {Econometrica},
+  volume =	 48,
+  number =	 1,
+  pages =	 {1-48},
+  year =	 1980
+}
+\end{filecontents}
 
 \begin{document}
 \maketitle
@@ -124,7 +283,7 @@ proposal and the first draft will factor into your grade on the paper.
 \end{table*}
 
 \bibliographystyle{alpha}
-\bibliography{tex/references}
+\bibliography{syllabus-2014}
 
 \section{License and copyright}
 To the extent possible under law, Gray Calhoun, the author, has waived
