Add TA office hours to 674 syllabus

--- a/674/syllabus-2014.tex
+++ b/674/syllabus-2014.tex
@@ -176,12 +176,12 @@
 \begin{table*}[h]
 \begin{tabularx}{\textwidth}{rXXX}
   \toprule
-         & Gray Calhoun         & Helle Bunzel        & Pan Liu (\TA)       \\
+         & Gray Calhoun         & Helle Bunzel        & Pan Liu (\TA)        \\
   \midrule
-  email  & gcalhoun@iastate.edu & hbunzel@iastate.edu & panliu@iastate.edu  \\
-  office & 467 Heady            & 373 Heady           & 280B Heady          \\
-  OH     & Tu 2--3:30           & \allcaps{TBD}       & \allcaps{TBD}       \\
-  \bottomrule                                                               \\
+  email  & gcalhoun@iastate.edu & hbunzel@iastate.edu & panliu@iastate.edu   \\
+  office & 467 Heady            & 373 Heady           & 280B Heady           \\
+  OH     & Tu 2--3:30           & \allcaps{TBD}       & \allcaps{MW} 2--3:30 \\
+  \bottomrule                                                                \\
 \end{tabularx}
 \caption{Instructor and TA contact information.}
 \end{table*}
