Tweak wording on 671 syllabus

--- a/671/syllabus-2014.tex
+++ b/671/syllabus-2014.tex
@@ -378,7 +378,9 @@ be assigned as the semester goes along.
    \bottomrule
   \end{tabularx}
   \caption{List of major units and required reading for the class.
-    There is a bibliography with full citations elsewhere in the syllabus.}
+    There is a bibliography with full citations elsewhere in the syllabus.
+    The individual chapters and articles are available on on the course
+    homepage (or on Google).}
   \label{tab1}
 \end{table*}
 
