Change computing component of syllabus slightly

--- a/671/syllabus-2014.tex
+++ b/671/syllabus-2014.tex
@@ -403,10 +403,10 @@ for the sessions is listed in Table~\ref{tab2}.
     Intro to computing resources    & 1    & Intro to the Unix shell    & 10        \\
     Programming in R                & 2    & Version control with Git   & 11        \\
     Graphics in R                   & 3    & More Git                   & 12        \\
-    Data management in R            & 4    & \emph{Class meeting}       & \emph{13} \\
-    LaTeX                           & 5    & \TBD\ --- discuss with \TA & 14        \\
-    Reproducible research  \& Knitr & 6    & \emph{Final exam review}   & \emph{15} \\
-    Databases and \allcaps{SQL}     & 7                                             \\
+    Intro to data management        & 4    & \emph{Class meeting}       & \emph{13} \\
+    More data management            & 5    & \TBD\ --- discuss with \TA & 14        \\
+    LaTeX                           & 6    & \emph{Final exam review}   & \emph{15} \\
+    Reproducible research \& Knitr  & 7                                             \\
     \emph{Midterm review}           & \emph{8}                                      \\
     \emph{Midterm}                  & \emph{9}                                      \\
     \bottomrule
