Add letterspacing to 'OH'

--- a/671/syllabus-2014.tex
+++ b/671/syllabus-2014.tex
@@ -156,6 +156,7 @@
 \frenchspacing
 
 \newcommand{\homepage}{\url{http://www.econ.iastate.edu/~gcalhoun/671}}
+\newcommand{\OH}{\allcaps{OH}}
 \newcommand{\RAT}{\allcaps{RAT}}
 \newcommand{\TA}{\allcaps{TA}}
 \newcommand{\TBD}{\allcaps{TBD}}
@@ -180,7 +181,7 @@
   email  & gcalhoun@iastate.edu & yanghe@iastate.edu  \\
   phone  & (515) 294-6271       & Don't call the \TA! \\
   office & 467 Heady            & 271 Heady           \\
-  OH     & Tu 2--3:30           & \TBD                \\
+  \OH    & Tu 2--3:30           & \TBD                \\
   \bottomrule
 \end{tabularx}
 \caption{Instructor and \TA\ contact information.}
