--- a/674/syllabus-2014.tex
+++ b/674/syllabus-2014.tex
@@ -163,6 +163,7 @@
 
 \newcommand{\email}[1]{\href{mailto:#1}{\nolinkurl{#1}}}
 \newcommand{\DSGE}{\allcaps{DSGE}}
+\newcommand{\OH}{\allcaps{OH}}
 \newcommand{\TA}{\allcaps{TA}}
 \newcommand{\VAR}{\allcaps{VAR}}
 
@@ -181,7 +182,7 @@
   \midrule
   email  & gcalhoun@iastate.edu & hbunzel@iastate.edu & panliu@iastate.edu   \\
   office & 467 Heady            & 373 Heady           & 280B Heady           \\
-  OH     & Tu 2--3:30           & \allcaps{TBD}       & \allcaps{MW} 2--3:30 \\
+  \OH    & Tu 2--3:30           & \allcaps{TBD}       & \allcaps{MW} 2--3:30 \\
   \bottomrule
 \end{tabularx}
 \caption{Instructor and TA contact information.}
