Move bibliography in 671 syllabus

--- a/671/syllabus-2014.tex
+++ b/671/syllabus-2014.tex
@@ -179,7 +179,7 @@
          & Gray Calhoun         & Yang He (\TA)       \\
   \midrule
   email  & gcalhoun@iastate.edu & yanghe@iastate.edu  \\
-  phone  & (515) 294-6271       & Don't call the \TA! \\
+  phone  & (515) 294-6271       &                     \\
   office & 467 Heady            & 271 Heady           \\
   \OH    & Tu 2--3:15           & \TBD                \\
   \bottomrule
@@ -207,7 +207,7 @@ call me or stop by my office.
 
 This class has two required textbooks, \citep{CB02} and \citep{Gr12},
 and two recommended textbooks, \citep{Ga97} and \citep{Fr09}.%
-\footnote{There is a bibliography with full citations later in the
+\footnote{There is a bibliography with full citations at the end of the
   syllabus.} %
 These are all available at the university bookstore but can be
 purchased cheaper online. There are a few other required readings that
@@ -380,7 +380,7 @@ be assigned as the semester goes along.
    \bottomrule
   \end{tabularx}
   \caption{List of major units and required reading for the class.
-    There is a bibliography with full citations elsewhere in the syllabus.
+    There is a bibliography with full citations at the end of the syllabus.
     The individual chapters and articles are available on on the course
     homepage (or on Google).}
   \label{tab1}
@@ -422,10 +422,8 @@ document. Anyone is free to reuse some or all of this syllabus to
 teach a similar class, or for any other purpose. You can download the
 LaTeX source code for this file from the course homepage, \homepage.
 
-\bibliographystyle{alpha}
-\bibliography{syllabus-2014}
-
 \newpage
+
 \section{University policies}
 
 The following policies apply to \emph{every} course at Iowa State
@@ -497,5 +495,10 @@ Equal Opportunity and Compliance.
 
 If you feel that any of your rights as a student have been violated,
 please email \url{academicissues@iastate.edu}.
+
+\newpage
+
+\bibliographystyle{alpha}
+\bibliography{syllabus-2014}
 
 \end{document}
