Update with TA office hours

--- a/671/syllabus-2014.tex
+++ b/671/syllabus-2014.tex
@@ -181,7 +181,7 @@
   email  & gcalhoun@iastate.edu & yanghe@iastate.edu  \\
   phone  & (515) 294-6271       &                     \\
   office & 467 Heady            & 271 Heady           \\
-  \OH    & Tu 2--3:15           & \TBD                \\
+  \OH    & Tu 2\,--\,3:15       & Mon 2\,--\,4        \\
   \bottomrule
 \end{tabularx}
 \caption{Instructor and \TA\ contact information.}
