Tweak formatting of 674 syllabus

--- a/674/syllabus-2014.tex
+++ b/674/syllabus-2014.tex
@@ -154,8 +154,8 @@
 
 \urlstyle{same}
 \DeclareUrlCommand\url{%
-\def\UrlLeft{\guilsinglleft}%
-\def\UrlRight{\guilsinglright}%
+\def\UrlLeft{\guillemotleft}%
+\def\UrlRight{\guillemotright}%
 \urlstyle{same}}
 
 \DisableLigatures{family = tt*}
@@ -182,7 +182,7 @@
   \midrule
   email  & gcalhoun@iastate.edu & hbunzel@iastate.edu & panliu@iastate.edu   \\
   office & 467 Heady            & 373 Heady           & 280B Heady           \\
-  \OH    & Tu 2--3:15           & \allcaps{TBD}       & \allcaps{MW} 2--3:30 \\
+  \OH    & Tu 2\,--\,3:15       & \allcaps{TBD}       & \allcaps{MW} 2\,--\,3:30 \\
   \bottomrule
 \end{tabularx}
 \caption{Instructor and TA contact information.}
@@ -215,10 +215,10 @@ There are a few more papers listed on the syllabus and many more
 references on each topic will be given in the lectures.
 Additional material may be posted online as well, at
 \begin{itemize}
-\item \url{http://www.econ.iastate.edu/~gcalhoun/674}, when Gray is
-  teaching;
+\item \url{http://www.econ.iastate.edu/~gcalhoun/674}, when Gray
+  teaches;
 \item Blackboard Learn, \url{https://bb.its.iastate.edu}, when Helle
-  is teaching.
+  teaches.
 \end{itemize}
 
 You can use any software that you'd like for this class.
@@ -283,9 +283,6 @@ proposal and the first draft will factor into your grade on the paper.
   deadlines.}
 \end{table*}
 
-\bibliographystyle{alpha}
-\bibliography{syllabus-2014}
-
 \section{License and copyright}
 To the extent possible under law, Gray Calhoun, the author, has waived
 all copyright and related or neighboring rights to this
@@ -293,8 +290,6 @@ document. Anyone is free to reuse part or all of this syllabus to
 teach a similar class, or for any other purpose. You can download the
 LaTeX source code for this file from the course webpage,
 \url{https://www.econ.iastate.edu/~gcalhoun/674}.
-
-\newpage
 
 \section{University policies}
 
@@ -367,5 +362,10 @@ Equal Opportunity and Compliance.
 
 If you feel that any of your rights as a student have been violated,
 please email \url{academicissues@iastate.edu}.
+
+\newpage
+
+\bibliographystyle{alpha}
+\bibliography{syllabus-2014}
 
 \end{document}
