Mention bibliography at end of 674 syllabus

--- a/674/syllabus-2014.tex
+++ b/674/syllabus-2014.tex
@@ -280,7 +280,8 @@ proposal and the first draft will factor into your grade on the paper.
 \end{tabularx}
 \caption{Lecture outline for the first part of the class; tentative
   topics to be covered later in the semester; and important
-  deadlines.}
+  deadlines. There is a bibliography with complete citations at the
+  end of this document.}
 \end{table*}
 
 \section{License and copyright}
