Change regression modeling material to all of chapter 9

--- a/671/syllabus-2014.tex
+++ b/671/syllabus-2014.tex
@@ -369,7 +369,7 @@ be assigned as the semester goes along.
     Statistical estimation                        & 9/23  & \citep{CB02} 7, 10.1, 10.2                                                                                \\
     Statistical inference                         & 10/07 & \citep{CB02} 8, 9, 10.3, 10.4                                                                             \\
     Linear regression                             & 10/21 & \citep{Gr12} 2--4, 5.1--5.7, 9.1, 9.2                                                                     \\
-    Regression modeling                           & 11/11 & \citep{Gr12} 5.8--5.11, 6, 9.1--9.3, 10.1--10.3; \citep{GH07} 6                                           \\
+    Regression modeling                           & 11/11 & \citep{Gr12} 5.8--5.11, 6, 9, 10.1--10.3; \citep{GH07} 6                                                  \\
     Program evaluation                            & 12/02 & \citep{Gr12} 8.1--8.3; \citep{Fi26}; \citep{Fr91}; \citep{IW09} 1--4, 5.1--5.3, 5.11--5.13; \citep{Ru05}; \\
                                                   &       & \citep{Ro09} 1, 19, Summary                                                                               \\
                                                                                                                                                                       \\
