Remove leading http:// from websites on 674 syllabus

--- a/674/syllabus-2014.tex
+++ b/674/syllabus-2014.tex
@@ -66,7 +66,7 @@
   title =	 {Lecture Notes for Time Series Analysis ({MIT}
                   14.384)},
   note =	 {Available at
-                  \url{http://ocw.mit.edu/courses/economics/14-384-time-series-analysis-fall-2013}. Licensed
+                  \url{ocw.mit.edu/courses/economics/14-384-time-series-analysis-fall-2013}. Licensed
                   under Creative Commons BY-NC-SA},
   year =	 2013
 }
@@ -78,7 +78,7 @@
   year =	 2011,
   journal =	 {Nobelprize.org},
   note =	 {Available at
-                  \url{http://www.nobelprize.org/nobel_prizes/economic-sciences/laureates/2011/advanced-economicsciences2011.pdf}}
+                  \url{www.nobelprize.org/nobel_prizes/economic-sciences/laureates/2011/advanced-economicsciences2011.pdf}}
 }
 
 @Misc{SW08,
@@ -86,7 +86,7 @@
   title =	 {{NBER} {S}ummer {I}nstitute {L}ectures: What's New
                   in Econometrics --- Time Series},
   howpublished = {Video and slides available at
-                  \url{http://www.nber.org/minicourse_2008.html}},
+                  \url{www.nber.org/minicourse_2008.html}},
   month =	 {July},
   year =	 2008
 }
@@ -215,9 +215,9 @@ There are a few more papers listed on the syllabus and many more
 references on each topic will be given in the lectures.
 Additional material may be posted online as well, at
 \begin{itemize}
-\item \url{http://www.econ.iastate.edu/~gcalhoun/674}, when Gray
+\item \url{www.econ.iastate.edu/~gcalhoun/674}, when Gray
   teaches;
-\item Blackboard Learn, \url{https://bb.its.iastate.edu}, when Helle
+\item Blackboard Learn, \url{bb.its.iastate.edu}, when Helle
   teaches.
 \end{itemize}
 
@@ -225,7 +225,7 @@ You can use any software that you'd like for this class.
 Matlab is the standard software package in macroeconomics and you've
 already used R in the first-year econometric sequence, but I'd
 encourage you to try out Julia%
-\footnote{Available at \url{http://julialang.org}.} %
+\footnote{Available at \url{julialang.org}.} %
 --- it's syntax is very similar to
 Matlab's, but the language is much better designed.%
 \footnote{The similarity of the syntax means that a lot of Matlab code
@@ -233,7 +233,7 @@ Matlab's, but the language is much better designed.%
 If you want to learn a more general-purpose programing language,
 Python is a good choice.%
 \footnote{Python here means \emph{SciPy}. See
-  \url{http://scipy.org}. And you should use Python 3 if you go this
+  \url{scipy.org}. And you should use Python 3 if you go this
   route, not Python 2. Version 3.5 is coming soon and will introduce
   native infix matrix operators, which will help a lot with code
   readability.} %
@@ -290,7 +290,7 @@ all copyright and related or neighboring rights to this
 document. Anyone is free to reuse part or all of this syllabus to
 teach a similar class, or for any other purpose. You can download the
 LaTeX source code for this file from the course webpage,
-\url{https://www.econ.iastate.edu/~gcalhoun/674}.
+\url{www.econ.iastate.edu/~gcalhoun/674}.
 
 \section{University policies}
 
@@ -302,7 +302,7 @@ University. They are listed here for your convenience and reference.
 The class will follow Iowa State University's policy on academic
 dishonesty.  Anyone suspected of academic dishonesty will be reported
 to the Dean of Students Office,
-\url{http://www.dso.iastate.edu/ja/academic/misconduct.html}.
+\url{www.dso.iastate.edu/ja/academic/misconduct.html}.
 
 \subsection*{Disability accommodation}
 
