Fix url on GDP post

--- a/notes/_posts/2014-09-26-gdp.md
+++ b/notes/_posts/2014-09-26-gdp.md
@@ -50,7 +50,7 @@ the previous one. This accumulates, so we’ll be much worse off in 10
 years and 20 years than we would be otherwise unless that trend
 changes.
 
-The data are available through the St. Louis Fed ([GDP][1], GDI[2])
+The data are available through the St. Louis Fed ([GDP][1], [GDI][2])
 and the [R code used for the plots is on GitHub][3].
 
 [1]: http://research.stlouisfed.org/fred2/series/GDPC1
