--- a/rss/_posts/2014-10-30-gdp-graph.md
+++ b/rss/_posts/2014-10-30-gdp-graph.md
@@ -1,5 +1,5 @@
 ---
-title: New CPI graph on twitter
+title: New GDP graph on twitter
 author: Gray Calhoun
 layout: blog
 link: https://twitter.com/grayclhn/status/525087913512411138
@@ -8,5 +8,5 @@ link: https://twitter.com/grayclhn/status/525087913512411138
 Hi everyone, I just posted a new GDP graph to twitter with today's
 data release:
 
-<blockquote class="twitter-tweet" lang="en" data-cards="hidden"><p>For some degree of closure, a graph of updated Q2 <a href="https://twitter.com/hashtag/GDP?src=hash">#GDP</a> <a href="http://t.co/rXf8ridFqF">pic.twitter.com/rXf8ridFqF</a></p>&mdash; gray (@grayclhn) <a href="https://twitter.com/grayclhn/status/518138257696370688">October 3, 2014</a></blockquote>
+<blockquote class="twitter-tweet" lang="en"><p>Yesterday&#39;s real <a href="https://twitter.com/hashtag/gdp?src=hash">#gdp</a> release: 3.5% for Q3 (annualized, seaonally adjusted) <a href="http://t.co/79L8Td5v0P">pic.twitter.com/79L8Td5v0P</a></p>&mdash; gray (@grayclhn) <a href="https://twitter.com/grayclhn/status/528078256637874176">October 31, 2014</a></blockquote>
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
